feat: add get sop category
